# Cpp_Essentials

./: .gitattributes  .gitignore  .gitmodules  README.md  get_c_info.c  get_cpp_info.cpp
CMake_and_Makefile/Animals.cmake/: Animal.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Factory.hpp  Factory_Impl.hpp  main.cpp
CMake_and_Makefile/Basic/: CMakeLists.txt  Calc_sqrt.cpp  Config.h.in
CMake_and_Makefile/CTest_Unit_Testing/BoostUT/: CMakeLists.txt  main.cpp  test.cpp
CMake_and_Makefile/CTest_Unit_Testing/Catch2UT/: CMakeLists.txt  main.cpp  test.cpp
CMake_and_Makefile/CTest_Unit_Testing/DetectMemoryFaults/: CMakeLists.txt  leaky_implementation.cpp  leaky_implementation.hpp  test.cpp
CMake_and_Makefile/CTest_Unit_Testing/GoogleTestUT/: CMakeLists.txt  main.cpp  test.cpp
CMake_and_Makefile/CTest_Unit_Testing/SimpleUT/: CMakeLists.txt
CMake_and_Makefile/CheckCPUArchitecture.cmake/: CMakeLists.txt
CMake_and_Makefile/CheckCPUInstructionSet.cmake/: CMakeLists.txt
CMake_and_Makefile/Condition.cmake/: CMakeLists.txt  Message.cpp  main.cpp
CMake_and_Makefile/Option.cmake/: CMakeLists.txt
CMake_and_Makefile/test_object_lib/: CMakeLists.txt  Message.cpp  Message.hpp  test_object.cpp
Concurrency/: CMakeLists.txt  Concurrency.cpp  Concurrency.pro  calc.cpp  calc.hpp  multi_threads.cpp  multi_threads.hpp  test_multi_threads_calc.c++
Concurrency/Memory_Model/: CMakeLists.txt  Memory_Model.pro  atomic.cpp  atomic.hpp  atomic_impl.hpp  main.cpp  memory_location.cpp  memory_location.hpp  test_atomic.cc
Concurrency/Memory_Model/test_threads_safety/: my_thread.cpp  my_thread.hpp  test_threads_safety.cc
Concurrency/basics/: multi_threads.cpp  multi_threads.hpp  pass_parameters_between_tasks.cpp  simple_multiple_tasks.cpp  test_parallel_accumulate.c++  test_parallel_accumulate.h++
Concurrency/multi_threads/: detach_thread_to_incur_disaster  detach_thread_to_incur_disaster.cpp  main.cpp  multi_threads.pro  producer_consumer.cpp  producer_consumer.hpp  test_producer_consumer.c++  test_threads.c++  test_threads.h++  threads.cpp  threads.hpp  utils.cpp  utils.hpp
Concurrency/multi_threads/avoid_data_race/: lock.cpp  lock.hpp  mutual_exclusion.cpp  mutual_exclusion.hpp  test_mutual_exclusion.c++
UserTypes/: CMakeLists.txt  UserTypes.pro
UserTypes/BigFiveSectors/: BigFiveSectors.pro  CMakeLists.txt  big_five_sectors.cpp  big_five_sectors.hpp  catch2_unit_test.c++  constructor_destructor.cpp  constructor_destructor.hpp  finally.hpp  initialization.cpp  initialization.hpp  main.cpp  my_container.hpp  pointers.hpp  pointers_impl.hpp  test_big_five_sectors.c++  test_constructor_destructor.c++  test_initialization.c++  test_my_container.c++  test_pointers.c++
UserTypes/Classes/: CMakeLists.txt  Classes.pro  Date.cpp  Date.hpp  basics.cpp  basics.hpp  member_type.hpp  test_basics.c++  test_date.c++  test_date.h++
UserTypes/OverloadingOperators/: CMakeLists.txt  UniquePtr.hpp  UniquePtr_Impl.hpp  log_test_messages.c++  operators.cpp  operators.hpp  test_conversion_ambiguousness.c++  test_operators.c++  test_type_conversion_operator.c++  type_conversion_operator.cpp  type_conversion_operator.hpp
UserTypes/SpecialOperators/: CMakeLists.txt  Complex.hpp  SmartPointers.hpp  SmartPointers_Impl.hpp  SpecialOperators.cpp  SpecialOperators.hpp  Test_SmartPointers.c++  Test_SpecialOperators.c++  carry_counting_system.cpp  carry_counting_system.hpp  test_carry_counting_system.c++  test_user_defined_literal_operator.cpp  user_defined_literal_operator.cpp  user_defined_literal_operator.hpp
UserTypes/String/: CMakeLists.txt  String.cpp  String.hpp  Test_String.cpp
UserTypes/Test_User_UniquePtr/: CMakeLists.txt  Test_User_UniquePtr.c++  UniquePtr.hpp  UniquePtr_Impl.hpp  main.cpp
UserTypes/operator_new_delete/: CMakeLists.txt  class_specific_operator_new_delete.cpp  class_specific_operator_new_delete.hpp  finally_impl.hpp  main.cpp  operator_new_delete.cpp  operator_new_delete.hpp  test_operator_new_delete.cpp  test_operator_new_delete.hpp
abstraction_mechanisms/: CMakeLists.txt  main.cpp
abstraction_mechanisms/Cast/: CMakeLists.txt  pointer_cast.hpp  smart_pointer_cast.hpp  smart_pointer_cast_impl.hpp  test_cast.c++  test_pointer_cast.c++  test_smart_pointer_cast.c++  test_type_cast.c++
abstraction_mechanisms/Hierarchies/: CMakeLists.txt  Ival.cpp  Ival.hpp  Ival_box.cpp  Ival_box.hpp  main.cpp
abstraction_mechanisms/Inheritance/: CMakeLists.txt  Employee.cpp  Employee.hpp  Test_Employee.c++  Test_Inheritance.c++  finalize.hpp  finalize_impl.hpp  inherit_constructors.hpp  main.cpp  return_type_relaxation.cpp  return_type_relaxation.hpp  test_inherit_constructors.c++  test_return_type_relaxation.c++
abstraction_mechanisms/Interface_Polymorph/: CMakeLists.txt  io.hpp  io_impl.hpp  io_object.cpp  io_object.hpp  main.cpp  test_interface_polymorph.c++  test_interface_polymorph.h++  test_users.c++  users.cpp  users.hpp
abstraction_mechanisms/RTTI/: CMakeLists.txt  main.cpp  test_RTTI.cxx
abstraction_mechanisms/RTTI_and_Cast/: CMakeLists.txt  main.cpp
abstraction_mechanisms/classes/: CMakeLists.txt  Container.hpp  List_container.cpp  List_container.hpp  Vector.cpp  Vector_container.cpp  complex.hpp  enumerate.cpp
abstraction_mechanisms/concepts/: CMakeLists.txt  concepts.hpp  main.cpp  test_concepts.cpp
abstraction_mechanisms/copy_move/: Vector.cpp  Vector.hpp  test_Vector.c++
abstraction_mechanisms/experiment/: CMakeLists.txt  check_c_standard_no.c  check_cpp_standard_no.cpp  lambda_with_template.cpp  main.cpp  test_experiment.c++
abstraction_mechanisms/generic_prog/: CMakeLists.txt  Test_GenericProg.c++  generalize.cpp  generalize.hpp  generic_algorithms.cpp  main.cpp  test_generalize.c++
abstraction_mechanisms/meta_prog/: CMakeLists.txt  main.cpp
abstraction_mechanisms/templates/: CMakeLists.txt  Vector.hpp  functor.hpp  main.cpp  test_Template_Vector.cpp  test_functor.cpp  test_template_types.c++  test_template_types.h++
abstraction_mechanisms/templates_and_class_hierarchies/: main.cpp
abstraction_mechanisms/utils/: finalize.cpp  finalize.hpp
(+598 files in other folders)
